@@ -1,9 +1,9 @@
 package org.bitrepository.protocol.fileexchange;
 
-import org.apache.commons.codec.CharEncoding;
 import org.apache.commons.io.IOUtils;
 import org.bitrepository.protocol.FileExchange;
 import org.bitrepository.protocol.LocalFileExchange;
+import org.bitrepository.settings.referencesettings.FileExchangeSettings;
 import org.fusesource.hawtbuf.ByteArrayInputStream;
 import org.jaccept.structure.ExtendedTestCase;
 import org.testng.Assert;
@@ -25,11 +25,18 @@ import java.nio.file.Files;
 import java.nio.file.Paths;
 
 public class LocalFileExchangeTest extends ExtendedTestCase  {
-
     final static String BASE_FILE_EXCHANGE_DIR = "target/fileexchange/";
-    
-    @BeforeClass
-    public void createFileExchangeDir() throws IOException {
+    private FileExchange exchange;
+
+    @BeforeClass(alwaysRun = true)
+    public void setup() throws IOException {
+        createFileExchangeDir();
+        FileExchangeSettings settings = new FileExchangeSettings();
+        settings.setPath(BASE_FILE_EXCHANGE_DIR);
+        exchange = new LocalFileExchange(settings);
+    }
+
+    private void createFileExchangeDir() throws IOException {
         try {
             Files.createDirectory(Paths.get(BASE_FILE_EXCHANGE_DIR));
         } catch (FileAlreadyExistsException e) {
@@ -44,9 +51,7 @@ public class LocalFileExchangeTest extends ExtendedTestCase  {
         File basedir = new File(BASE_FILE_EXCHANGE_DIR);
         URL expectedUrl = new URL("file:" + basedir.getAbsolutePath() + "/" + testFile);
         
-        FileExchange lfe = new LocalFileExchange(BASE_FILE_EXCHANGE_DIR);
-        
-        URL actualUrl = lfe.getURL(testFile);
+        URL actualUrl = exchange.getURL(testFile);
         Assert.assertEquals(actualUrl, expectedUrl);
         File actualFile = new File(actualUrl.getFile());
         Assert.assertFalse(actualFile.exists());
@@ -54,8 +59,8 @@ public class LocalFileExchangeTest extends ExtendedTestCase  {
 
     /**
      * Test that filenames containing '#' character can be ingested in bitrepository
-     * Filenames needs to be ingested URLEncoded meaning that the url to filenames is delivered as "getUrlTestfileHashchar%23Testfragment" instead of getUrlTestfileHashchar#Testfragment
-     * @throws IOException
+     * Filenames needs to be ingested URLEncoded meaning that the url to filenames is delivered as
+     * "getUrlTestfileHashchar%23Testfragment" instead of getUrlTestfileHashchar#Testfragment
      */
     @Test
     public void putFileByFileContainingHashTest() throws Exception {
@@ -64,12 +69,11 @@ public class LocalFileExchangeTest extends ExtendedTestCase  {
         String testFileContent = "lorem ipsum1";
         File testFile = createTestFile(testFileLocation, testFileContent);
 
-        FileExchange lfe = new LocalFileExchange(BASE_FILE_EXCHANGE_DIR);
-
         File basedir = new File(BASE_FILE_EXCHANGE_DIR);
-        URL expectedUrl = new URL("file:" + basedir.getAbsolutePath() + "/" + URLEncoder.encode(testFileName, CharEncoding.UTF_8));
+        URL expectedUrl = new URL("file:" + basedir.getAbsolutePath() + "/" + URLEncoder.encode(testFileName,
+                StandardCharsets.UTF_8));
 
-        URL fileExchangeUrl = lfe.putFile(testFile);
+        URL fileExchangeUrl = exchange.putFile(testFile);
         Assert.assertEquals(fileExchangeUrl, expectedUrl);
         File actualFile = new File(fileExchangeUrl.toURI());
         Assert.assertTrue(actualFile.exists());
@@ -85,12 +89,10 @@ public class LocalFileExchangeTest extends ExtendedTestCase  {
         String testFileContent = "lorem ipsum1";
         File testFile = createTestFile(testFileLocation, testFileContent);
         
-        FileExchange lfe = new LocalFileExchange(BASE_FILE_EXCHANGE_DIR);
-        
         File basedir = new File(BASE_FILE_EXCHANGE_DIR);
         URL expectedUrl = new URL("file:" + basedir.getAbsolutePath() + "/" + testFileName);
         
-        URL fileExchangeUrl = lfe.putFile(testFile);
+        URL fileExchangeUrl = exchange.putFile(testFile);
         Assert.assertEquals(fileExchangeUrl, expectedUrl);
         
         File actualFile = new File(fileExchangeUrl.getFile());
@@ -105,11 +107,9 @@ public class LocalFileExchangeTest extends ExtendedTestCase  {
         String testFileName = "putFileByStreamTestFile";
         String testFileContent = "lorem ipsum2";
         
-        FileExchange lfe = new LocalFileExchange(BASE_FILE_EXCHANGE_DIR);
-        
         InputStream is = new ByteArrayInputStream(testFileContent.getBytes(StandardCharsets.UTF_8));
-        URL fileExchangeUrl = lfe.getURL(testFileName);
-        lfe.putFile(is, fileExchangeUrl);
+        URL fileExchangeUrl = exchange.getURL(testFileName);
+        exchange.putFile(is, fileExchangeUrl);
         
         File fileExchangeFile = new File(fileExchangeUrl.getFile());
         String fileExchangeContent = readTestFileContent(fileExchangeFile);
@@ -123,12 +123,10 @@ public class LocalFileExchangeTest extends ExtendedTestCase  {
         String testFileContent = "lorem ipsum3";
         String testFileLocation = "target/" + testFileName;
         
-        FileExchange lfe = new LocalFileExchange(BASE_FILE_EXCHANGE_DIR);
-        
         File testFile = createTestFile(testFileLocation, testFileContent);
         URL testFileUrl = testFile.toURI().toURL();
         
-        InputStream is = lfe.getFile(testFileUrl);
+        InputStream is = exchange.getFile(testFileUrl);
         String fileContent = IOUtils.toString(is, StandardCharsets.UTF_8);
         Assert.assertEquals(fileContent, testFileContent);
     }
@@ -142,11 +140,9 @@ public class LocalFileExchangeTest extends ExtendedTestCase  {
         File testFile = createTestFile(testFileLocation, testFileContent);
         URL testFileUrl = testFile.toURI().toURL();
         
-        FileExchange lfe = new LocalFileExchange(BASE_FILE_EXCHANGE_DIR);
-        
         OutputStream os = new ByteArrayOutputStream();
         
-        lfe.getFile(os, testFileUrl);
+        exchange.getFile(os, testFileUrl);
         Assert.assertEquals(os.toString(), testFileContent);
     }
     
@@ -155,15 +151,14 @@ public class LocalFileExchangeTest extends ExtendedTestCase  {
         String testFileName = "getFileByAddressTestFile";
         String testFileContent = "lorem ipsum5";
         String testFileLocation = "target/" + testFileName;
-        
-        FileExchange lfe = new LocalFileExchange(BASE_FILE_EXCHANGE_DIR);
+
         File testFile = createTestFile(testFileLocation, testFileContent);
         URL testFileUrl = testFile.toURI().toURL();
         
         File destination = new File("target/getFileByAddressTestOutputFile");
         destination.deleteOnExit();
         
-        lfe.getFile(destination, testFileUrl.toString());
+        exchange.getFile(destination, testFileUrl.toString());
         String destinationContent = readTestFileContent(destination);
         Assert.assertEquals(destinationContent, testFileContent);
     }
@@ -173,15 +168,13 @@ public class LocalFileExchangeTest extends ExtendedTestCase  {
         String testFileName = "putFileByStreamTestFile";
         String testFileContent = "lorem ipsum6";
         
-        FileExchange lfe = new LocalFileExchange(BASE_FILE_EXCHANGE_DIR);
-        
         InputStream is = new ByteArrayInputStream(testFileContent.getBytes(StandardCharsets.UTF_8));
-        URL fileExchangeUrl = lfe.getURL(testFileName);
-        lfe.putFile(is, fileExchangeUrl);
+        URL fileExchangeUrl = exchange.getURL(testFileName);
+        exchange.putFile(is, fileExchangeUrl);
         
         File fileExchangeFile = new File(fileExchangeUrl.getFile());
         Assert.assertTrue(fileExchangeFile.exists());
-        lfe.deleteFile(fileExchangeUrl);
+        exchange.deleteFile(fileExchangeUrl);
         Assert.assertFalse(fileExchangeFile.exists());
     }
     
@@ -193,8 +186,7 @@ public class LocalFileExchangeTest extends ExtendedTestCase  {
     }
     
     private String readTestFileContent(File testFile) throws IOException {
-        String content = new String(Files.readAllBytes(Paths.get(testFile.toURI())), StandardCharsets.UTF_8);
-        return content;
+        return Files.readString(Paths.get(testFile.toURI()));
     }
     
 }
